fixed unesc shrinking & no slider covering txt

--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,7 @@ body{
     align-items: center;
     justify-content: center;
     overflow-y: hidden;
-    flex: auto;
-    
+    flex:auto    
 
 }
 li{
@@ -143,6 +142,8 @@ a:hover{
     overflow-y: hidden;
     flex-direction: row;
     justify-content: center;
+    flex-shrink: 0;
+    flex-grow: 1;
 
 
  }
@@ -154,6 +155,7 @@ a:hover{
     margin: 16px;
     border: 1px solid black;
     justify-content: center;
+    flex-grow: 1;
     
  }
  img.anime{
@@ -180,7 +182,7 @@ a:hover{
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
-    margin-bottom: 40px;
+ 
 
 
 }
@@ -207,6 +209,7 @@ a:hover{
  ::-webkit-scrollbar-thumb:horizontal{
     background-color: rgba(47, 79, 79,0.75);
     border-radius: 7px;
+
  }
  form{
     display: flex;
